--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   align-items: center;
   height: 100vh;
   width: 100%;
-  background-color: #fff;
+  background-color: #ecefff;
   overflow: hidden;
   position: relative;
 }
@@ -34,7 +34,7 @@
   height: 100%;
   cursor: pointer;
   position: absolute;
-  background-color: #fff;
+  background-color: #ecefff;
   transition: opacity 1s ease-in-out, transform 1s ease-in-out;
   z-index: 10;
 }
@@ -64,14 +64,14 @@
 
 .status-bar {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   position: absolute;
   top: 30px;
   left: 0;
   right: 0;
   z-index: 1000;
-  background-color: rgba(255, 255, 255, 0.8); /* Ensure visibility */
+  background-color: rgba(255, 255, 255, 0); /* Ensure visibility */
   padding: 10px;
   border-radius: 8px; /* Optional: adds rounded corners */
 }
@@ -103,17 +103,17 @@
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(4, 80px);
-  grid-template-rows: repeat(3, 80px);
-  gap: 10px;
+  grid-template-columns: repeat(3, 90px); /* 3 columns */
+  grid-template-rows: repeat(3, 90px); /* 3 rows */
+  gap: 5px; /* Gap between cards */
   justify-content: center;
   align-items: center;
 }
 
 .card {
-  width: 80px;
-  height: 80px;
-  background-color: #fff;
+  width: 80px; /* Smaller size */
+  height: 80px; /* Smaller size */
+  background-color: #ffffff;
   border: none;
   display: flex;
   justify-content: center;
@@ -121,6 +121,8 @@
   cursor: pointer;
   overflow: hidden;
   position: relative;
+  border-radius: 10px;
+  box-shadow: inset 0 0 10px rgba(231, 231, 231, 0.76);
 }
 
 .card-back {
@@ -129,11 +131,12 @@
   align-items: center;
   height: 100%;
   width: 100%;
-  background-color: #fff;
-  color: #000;
+  background-color: #ffda08;
+  color: #111111;
   font-family: 'Inter', sans-serif;
-  font-size: 16px;
+  font-size: 18px; /* Smaller font size */
   font-weight: bold;
+  box-shadow: inset 0 0 10px rgba(231, 231, 231, 0.76)
 }
 
 .card.flipped .card-back {
@@ -144,8 +147,9 @@
   margin: 0;
 }
 
-.game-over {
-  font-size: 24px;
-  font-weight: bold;
-  color: red;
+.attempts-over {
+  font-size: 18px;
+  font-weight: thin;
+  color: rgb(14, 14, 14);
+  text-align: center;
 }
